--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-My Page
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Test Page</title>
+    </head>
+    <body>
+        <p>This is my page</p>
+    </body>
+</html>
