--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Test Page</title>
+        <title>Chaitanya Leena Subramaniam</title>
     </head>
     <body>
-        <p>This is my page</p>
+        <h1>Chaitanya Leena Subramaniam</h1>
     </body>
 </html>
