basic page done

--- a/index.html
+++ b/index.html
@@ -1,10 +1,157 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-UK">
     <head>
         <meta charset="utf-8">
         <title>Chaitanya Leena Subramaniam</title>
+
+        <meta name="author" content="Chaitanya Leena Subramaniam">
+        <meta name="description" content="Chaitanya Leena Subramaniam's home page">
+
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Chaitanya Leena Subramaniam</h1>
+        <header>
+            <h1>Chaitanya Leena Subramaniam</h1>
+            <figure>
+                <img src="pic-1.jpg" alt="Me" width="300">
+                <figcaption>
+                    <p>
+                        PhD student in the
+                        <a href="https://www.irif.fr/poles/pps/index">
+                            PPS</a> 
+                        group at the
+                        <a href="https://www.irif.fr//en/index">
+                            IRIF</a>, Université Paris Diderot.
+                    </p>
+                    <p>
+                        In October 2021, I will begin a post-doc with
+                        <a href="https://home.sandiego.edu/~shulman/">
+                            Mike Shulman</a>
+                        at the University of San Diego.
+                    </p>
+                    <p>
+                        Here is a brief
+                        <a href="https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
+                            CV</a>.
+                    </p>
+                </figcaption>
+            </figure>
+        </header>
+
+        <main>
+            <h2>Writing</h2>
+            <h3>Preprints</h3>
+            <ul>
+                <li>
+                    <em>Opetopic algebras I: Algebraic structures on opetopic sets</em>
+                    (with
+                    <a href="https://hothanh.fr/cedric/">
+                        Cédric Ho Thanh</a>).
+                    <a href="https://arxiv.org/abs/1911.00907">
+                        arXiv:1911.00907.</a>
+                </li>
+                <li>
+                    <em>Small object arguments, plus-construction, and left exact localizations</em>
+                    (with
+                    <a href="http://mathieu.anel.free.fr/">
+                        Mathieu Anel</a>).
+                    <a href="https://arxiv.org/abs/2004.00731">
+                        arXiv:2004.00731.</a>
+                </li>
+            </ul>
+
+            <h3>In preparation</h3>
+            <ul>
+                <li>
+                    <em>Opetopic algebras II: Homotopy-coherent opetopic algebras</em>
+                    (with
+                    <a href="https://hothanh.fr/cedric/">
+                        Cédric Ho Thanh</a>).
+                </li>
+                <li>
+                    <em>Contextual categories as monoids in a category of collections</em>
+                    (with
+                    <a href="http://peterlefanulumsdaine.com/">
+                        Peter LeFanu Lumsdaine</a>).
+                </li>
+            </ul>
+
+            <h3>PhD Thesis</h3>
+            <p>
+                On 28 September 2021, I defended my PhD thesis
+                <em>From dependent type theory to higher algebraic structures</em>.
+                <a href="https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
+            </p>
+            <p>
+                 It was supervised by
+                <a href="https://www.irif.fr/~mellies/">
+                    Paul-André Melliès</a>.
+            </p>
+            <p>
+                The current version of the manuscript can be found
+                <a href="https://gitlab.math.univ-paris-diderot.fr/chaitanya/these-public/-/raw/master/main.pdf?inline=false">here</a>.
+                The slides are available
+                <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/soutenance-de-these.pdf?inline=false">here</a>.
+            </p>
+
+            <h2>Talks</h2>
+            <ul>
+                <li>
+                    Contextual categories as monoids in a category of collections,
+                    <a href="https://hott.github.io/HoTT-2019//programme/">
+                        HoTT 2019</a>, Carnegie Mellon University, Pittsburgh.
+                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/slides-cmu.pdf?inline=false">
+                        Slides</a>.
+                </li>
+                <li>
+                    Dependently typed theories as generalised algebraic theories,
+                    <a href="http://logic.math.su.se/palmgren-memorial/">
+                        Memorial conference for Erik Palmgren</a>, 2020.
+                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/expose-palmgren-memorial.pdf?inline=false">
+                        Slides</a>.
+                </li>
+                <li>
+                    The opetopic nerve of operads,
+                    <a href="https://www.irif.fr/~socs2020/fr/index.html">
+                        SOCS 2020</a>.
+                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/talk-socs2020.pdf?inline=false">
+                        Slides</a>.
+                </li>
+                <li>
+                    Dependently typed algebraic theories,
+                    <a href="http://www.math.muni.cz/~bourkej/BAS.html">
+                        Masaryk University Algebra Seminar</a>, 2021.
+                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/expose-brno-2021.pdf?inline=false">
+                        Slides</a>.
+                </li>
+                <li>Structures algébriques décrites par les théories à types dépendants,
+                    <a href="https://www.irif.fr/seminaires/cat/index">
+                        Séminaire Catégories supérieures</a>, IRIF, 2021.
+                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/seminaire-cat-sup-p7-mars-2021.pdf?inline=false">
+                        Notes in French</a>.
+                </li>
+                <li>
+                    Dependent type theory and higher algebraic structures,
+                    <a href="https://www.math.ntnu.no/acpms/">
+                        ACPMS seminar</a>, 2021.
+                </li>
+            </ul>
+            <!-- 
+                 <h2>
+                 <a href="enseignement.html">
+                 Enseignement</a>
+                 </h2> -->
+
+            <h2>Contact</h2>
+            <!-- <p>
+                 Office 4048,
+                 IRIF,
+                 Bâtiment Sophie Germain, 
+                 8 Place Aurélie Nemours, 75013 Paris.
+                 </p> -->
+            <p>
+                Email: chaitanya [at] irif [dot] fr
+            </p>
+        </main>
     </body>
 </html>
