added webpage github repo

--- a/index.html
+++ b/index.html
@@ -154,4 +154,11 @@
             </p>
         </main>
     </body>
+    <footer>
+        <p>
+            This website is on
+            <a href="https://github.com/huevosybacon/huevosybacon.github.io">
+                github</a>.
+        </p>
+    </footer>
 </html>
