added office address

--- a/index.html
+++ b/index.html
@@ -143,12 +143,11 @@
                  </h2> -->
 
             <h2>Contact</h2>
-            <!-- <p>
-                 Office 4048,
-                 IRIF,
-                 Bâtiment Sophie Germain, 
-                 8 Place Aurélie Nemours, 75013 Paris.
-                 </p> -->
+            <dl>
+                <dt>Office 4048</dt>
+                <dt>Bâtiment Sophie Germain</dt>
+                <dt>8 Place Aurélie Nemours, 75013 Paris.</dt>
+            </dl>
             <p>
                 Email: chaitanya [at] irif [dot] fr
             </p>
