--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Chaitanya Leena Subramaniam</title>
 
         <meta name="author" content="Chaitanya Leena Subramaniam">
-        <meta name="description" content="Chaitanya Leena Subramaniam's home page">
+        <meta name="description" content="Chaitanya's home page">
 
         <link rel="stylesheet" href="style.css">
     </head>
