--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-UK">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Chaitanya Leena Subramaniam</title>
 
         <meta name="author" content="Chaitanya Leena Subramaniam">
