slight layout change

--- a/index.html
+++ b/index.html
@@ -12,33 +12,28 @@
     </head>
     <body>
         <header>
-            <h1>Chaitanya Leena Subramaniam</h1>
-            <figure>
-                <img src="pic-1.jpg" alt="Me" width="300">
-                <figcaption>
-                    <p>
-                        PhD student in the
-                        <a href="https://www.irif.fr/poles/pps/index">
-                            PPS</a> 
-                        group at the
-                        <a href="https://www.irif.fr//en/index">
-                            IRIF</a>, Université Paris Diderot.
-                    </p>
-                    <p>
-                        In October 2021, I will begin a post-doc with
-                        <a href="https://home.sandiego.edu/~shulman/">
-                            Mike Shulman</a>
-                        at the University of San Diego.
-                    </p>
-                    <p>
-                        Here is a brief
-                        <a href="https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
-                            CV</a>.
-                    </p>
-                </figcaption>
-            </figure>
+            <img align="right" src="pic-1.jpg" alt="Me" width="300">
+            <h1>Chaitanya<br> Leena Subramaniam</h1>
+            <p>
+                PhD student in the
+                <a href="https://www.irif.fr/poles/pps/index">
+                    PPS</a> 
+                group at the
+                <a href="https://www.irif.fr//en/index">
+                    IRIF</a>, Université Paris Diderot.
+            </p>
+            <p>
+                In October 2021, I will begin a post-doc with
+                <a href="https://home.sandiego.edu/~shulman/">
+                    Mike Shulman</a>
+                at the University of San Diego.
+            </p>
+            <p>
+                Here is a brief
+                <a href="https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
+                    CV</a>.
+            </p>
         </header>
-
         <main>
             <h2>Writing</h2>
             <h3>Preprints</h3>
@@ -142,7 +137,6 @@
                  <a href="enseignement.html">
                  Enseignement</a>
                  </h2> -->
-
             <h2>Contact</h2>
             <dl>
                 <dt>Office 4048</dt>
@@ -153,12 +147,12 @@
                 Email: chaitanya [at] irif [dot] fr
             </p>
         </main>
+        <footer>
+            <p>
+                This website is on
+                <a href="https://github.com/huevosybacon/huevosybacon.github.io">
+                    github</a>.
+            </p>
+        </footer>
     </body>
-    <footer>
-        <p>
-            This website is on
-            <a href="https://github.com/huevosybacon/huevosybacon.github.io">
-                github</a>.
-        </p>
-    </footer>
 </html>
