small format change

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
                  Enseignement</a>
                  </h2> -->
             <h2>Contact</h2>
-            <dl>
-                <dt>Office 4048</dt>
-                <dt>Bâtiment Sophie Germain</dt>
-                <dt>8 Place Aurélie Nemours, 75013 Paris.</dt>
-            </dl>
-            <p>
-                Email: chaitanya [at] irif [dot] fr
-            </p>
+            <address>
+                <dl>
+                    <dt>Office 4048</dt>
+                    <dt>Bâtiment Sophie Germain</dt>
+                    <dt>8 Place Aurélie Nemours, 75013 Paris.</dt>
+                </dl>
+            </address>
+            <p> Email: chaitanya [at] irif [dot] fr </p>
         </main>
         <footer>
             <p>
