--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     </head>
     <body>
         <header>
-            <img align="right" src="pic-1.jpg" alt="Me" width="300">
+            <img align="right" src="pic-2.jpg" alt="Me">
             <h1>Chaitanya<br> Leena Subramaniam</h1>
+            <br>
+        </header>
+        <main>
             <p>
                 PhD student in the
                 <a href="https://www.irif.fr/poles/pps/index">
@@ -33,8 +36,7 @@
                 <a href="https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
                     CV</a>.
             </p>
-        </header>
-        <main>
+
             <h2>Writing</h2>
             <h3>Preprints</h3>
             <ul>
@@ -73,22 +75,24 @@
             </ul>
 
             <h3>PhD Thesis</h3>
-            <p>
-                On 28 September 2021, I defended my PhD thesis
-                <em>From dependent type theory to higher algebraic structures</em>.
-                <a href="https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
-            </p>
-            <p>
-                 It was supervised by
-                <a href="https://www.irif.fr/~mellies/">
-                    Paul-André Melliès</a>.
-            </p>
-            <p>
-                The current version of the manuscript can be found
-                <a href="https://gitlab.math.univ-paris-diderot.fr/chaitanya/these-public/-/raw/master/main.pdf?inline=false">here</a>.
-                The slides are available
-                <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/soutenance-de-these.pdf?inline=false">here</a>.
-            </p>
+            <dl>
+                <dt>
+                    On 28 September 2021, I defended my PhD thesis
+                    <em>From dependent type theory to higher algebraic structures</em>.
+                    <a href="https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
+                </dt>
+                <dt>
+                    It was supervised by
+                    <a href="https://www.irif.fr/~mellies/">
+                        Paul-André Melliès</a>.
+                </dt>
+                <dt>
+                    The current version of the manuscript can be found
+                    <a href="https://gitlab.math.univ-paris-diderot.fr/chaitanya/these-public/-/raw/master/main.pdf?inline=false">here</a>.
+                    The slides are available
+                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/soutenance-de-these.pdf?inline=false">here</a>.
+                </dt>
+            </dl>
 
             <h2>Talks</h2>
             <ul>
@@ -137,17 +141,17 @@
                  <a href="enseignement.html">
                  Enseignement</a>
                  </h2> -->
-            <h2>Contact</h2>
+        </main>
+        <footer>
+            <h3>Contact</h3>
             <address>
                 <dl>
                     <dt>Office 4048</dt>
                     <dt>Bâtiment Sophie Germain</dt>
                     <dt>8 Place Aurélie Nemours, 75013 Paris.</dt>
                 </dl>
+                <p> Email: chaitanya [at] irif [dot] fr </p>
             </address>
-            <p> Email: chaitanya [at] irif [dot] fr </p>
-        </main>
-        <footer>
             <p>
                 This website is on
                 <a href="https://github.com/huevosybacon/huevosybacon.github.io">
