--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <br>
         </header>
         <main>
+            <!-- <p>
+                 PhD student in the
+                 <a href="https://www.irif.fr/poles/pps/index">
+                 PPS</a> 
+                 group at the
+                 <a href="https://www.irif.fr//en/index">
+                 IRIF</a>, Université Paris Diderot.
+                 </p> -->
             <p>
-                PhD student in the
-                <a href="https://www.irif.fr/poles/pps/index">
-                    PPS</a> 
-                group at the
-                <a href="https://www.irif.fr//en/index">
-                    IRIF</a>, Université Paris Diderot.
-            </p>
-            <p>
-                In October 2021, I will begin a post-doc with
+                I am a post-doc, working (remotely) with
                 <a href="https://home.sandiego.edu/~shulman/">
                     Mike Shulman</a>
                 at the University of San Diego.
@@ -77,19 +77,23 @@
             <h3>PhD Thesis</h3>
             <dl>
                 <dt>
-                    On 28 September 2021, I defended my PhD thesis
-                    <em>From dependent type theory to higher algebraic structures</em>.
-                    <a href="https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
-                </dt>
-                <dt>
+                    I did my PhD in the
+                    <a href="https://www.irif.fr/poles/pps/index">
+                        PPS</a> 
+                    group at the
+                    <a href="https://www.irif.fr//en/index">
+                        IRIF</a>, Université Paris Diderot.
                     It was supervised by
                     <a href="https://www.irif.fr/~mellies/">
                         Paul-André Melliès</a>.
                 </dt>
                 <dt>
-                    The current version of the manuscript can be found
+                    My PhD thesis titled
+                    "<em>From dependent type theory to higher algebraic structures</em>" is available on the arXiv:
+                    <a href="https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
+                    The current version of the manuscript can also be found
                     <a href="https://gitlab.math.univ-paris-diderot.fr/chaitanya/these-public/-/raw/master/main.pdf?inline=false">here</a>.
-                    The slides are available
+                    The slides of the defence are available
                     <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/soutenance-de-these.pdf?inline=false">here</a>.
                 </dt>
             </dl>
