--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                  IRIF</a>, Université Paris Diderot.
                  </p> -->
             <p>
-                I am a post-doc, working (remotely) with
+                I am a post-doc, working with
                 <a href="https://home.sandiego.edu/~shulman/">
                     Mike Shulman</a>
                 at the University of San Diego.
