--- a/index.html
+++ b/index.html
@@ -150,11 +150,13 @@
             <h3>Contact</h3>
             <address>
                 <dl>
-                    <dt>Office 4048</dt>
-                    <dt>Bâtiment Sophie Germain</dt>
-                    <dt>8 Place Aurélie Nemours, 75013 Paris.</dt>
+                    <dt>Office 146</dt>
+                    <dt>Saints Tekakwitha and Serra Hall</dt>
+                    <dt>University of San Diego</dt>
+                    <dt>5998 Alcala Park, San Diego, CA 92110.</dt>
                 </dl>
-                <p> Email: chaitanya [at] irif [dot] fr </p>
+                <p> Email: cleenasubramaniam [at] sandiego [dot] edu </p>
+                <!-- <p> chaitanya [at] irif [dot] fr </p> -->
             </address>
             <p>
                 This website is on
