--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <h3>Contact</h3>
             <address>
                 <dl>
-                    <dt>Office 146</dt>
+                    <!-- <dt>Office 146</dt> -->
                     <dt>Saints Tekakwitha and Serra Hall</dt>
                     <dt>University of San Diego</dt>
                     <dt>5998 Alcala Park, San Diego, CA 92110.</dt>
