added teaching page; added math130

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en-UK">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Chaitanya Leena Subramaniam</title>
-
-        <meta name="author" content="Chaitanya Leena Subramaniam">
-        <meta name="description" content="Chaitanya's home page">
-
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <img align="right" src="pic-2.jpg" alt="Me">
-            <h1>Chaitanya<br> Leena Subramaniam</h1>
-            <br>
-        </header>
-        <main>
-            <!-- <p>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content=
+    "width=device-width, initial-scale=1">
+    <title>Chaitanya Leena Subramaniam</title>
+    <meta name="author" content="Chaitanya Leena Subramaniam">
+    <meta name="description" content="Chaitanya's home page">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img align="right" src="pic-2.jpg" alt="Me">
+        <h1>Chaitanya<br>
+        Leena Subramaniam</h1><br>
+    </header>
+    <main>
+        <!-- <p>
                  PhD student in the
                  <a href="https://www.irif.fr/poles/pps/index">
                  PPS</a> 
@@ -25,144 +24,130 @@
                  <a href="https://www.irif.fr//en/index">
                  IRIF</a>, Université Paris Diderot.
                  </p> -->
-            <p>
-                I am a post-doc, working with
-                <a href="https://home.sandiego.edu/~shulman/">
-                    Mike Shulman</a>
-                at the University of San Diego.
-            </p>
-            <p>
-                Here is a brief
-                <a href="https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
-                    CV</a>.
-            </p>
-
-            <h2>Writing</h2>
-            <h3>Preprints</h3>
-            <ul>
-                <li>
-                    <em>Opetopic algebras I: Algebraic structures on opetopic sets</em>
-                    (with
-                    <a href="https://hothanh.fr/cedric/">
-                        Cédric Ho Thanh</a>).
-                    <a href="https://arxiv.org/abs/1911.00907">
-                        arXiv:1911.00907.</a>
-                </li>
-                <li>
-                    <em>Small object arguments, plus-construction, and left exact localizations</em>
-                    (with
-                    <a href="http://mathieu.anel.free.fr/">
-                        Mathieu Anel</a>).
-                    <a href="https://arxiv.org/abs/2004.00731">
-                        arXiv:2004.00731.</a>
-                </li>
-            </ul>
-
-            <h3>In preparation</h3>
-            <ul>
-                <li>
-                    <em>Opetopic algebras II: Homotopy-coherent opetopic algebras</em>
-                    (with
-                    <a href="https://hothanh.fr/cedric/">
-                        Cédric Ho Thanh</a>).
-                </li>
-                <li>
-                    <em>Contextual categories as monoids in a category of collections</em>
-                    (with
-                    <a href="http://peterlefanulumsdaine.com/">
-                        Peter LeFanu Lumsdaine</a>).
-                </li>
-            </ul>
-
-            <h3>PhD Thesis</h3>
-            <dl>
-                <dt>
-                    I did my PhD in the
-                    <a href="https://www.irif.fr/poles/pps/index">
-                        PPS</a> 
-                    group at the
-                    <a href="https://www.irif.fr//en/index">
-                        IRIF</a>, Université Paris Diderot.
-                    It was supervised by
-                    <a href="https://www.irif.fr/~mellies/">
-                        Paul-André Melliès</a>.
-                </dt>
-                <dt>
-                    My PhD thesis titled
-                    "<em>From dependent type theory to higher algebraic structures</em>" is available on the arXiv:
-                    <a href="https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
-                    The current version of the manuscript can also be found
-                    <a href="https://gitlab.math.univ-paris-diderot.fr/chaitanya/these-public/-/raw/master/main.pdf?inline=false">here</a>.
-                    The slides of the defence are available
-                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/soutenance-de-these.pdf?inline=false">here</a>.
-                </dt>
-            </dl>
-
-            <h2>Talks</h2>
-            <ul>
-                <li>
-                    Contextual categories as monoids in a category of collections,
-                    <a href="https://hott.github.io/HoTT-2019//programme/">
-                        HoTT 2019</a>, Carnegie Mellon University, Pittsburgh.
-                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/slides-cmu.pdf?inline=false">
-                        Slides</a>.
-                </li>
-                <li>
-                    Dependently typed theories as generalised algebraic theories,
-                    <a href="http://logic.math.su.se/palmgren-memorial/">
-                        Memorial conference for Erik Palmgren</a>, 2020.
-                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/expose-palmgren-memorial.pdf?inline=false">
-                        Slides</a>.
-                </li>
-                <li>
-                    The opetopic nerve of operads,
-                    <a href="https://www.irif.fr/~socs2020/fr/index.html">
-                        SOCS 2020</a>.
-                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/talk-socs2020.pdf?inline=false">
-                        Slides</a>.
-                </li>
-                <li>
-                    Dependently typed algebraic theories,
-                    <a href="http://www.math.muni.cz/~bourkej/BAS.html">
-                        Masaryk University Algebra Seminar</a>, 2021.
-                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/expose-brno-2021.pdf?inline=false">
-                        Slides</a>.
-                </li>
-                <li>Structures algébriques décrites par les théories à types dépendants,
-                    <a href="https://www.irif.fr/seminaires/cat/index">
-                        Séminaire Catégories supérieures</a>, IRIF, 2021.
-                    <a href="https://gitlab.com/huevosybacon/talks-public/-/raw/master/seminaire-cat-sup-p7-mars-2021.pdf?inline=false">
-                        Notes in French</a>.
-                </li>
-                <li>
-                    Dependent type theory and higher algebraic structures,
-                    <a href="https://www.math.ntnu.no/acpms/">
-                        ACPMS seminar</a>, 2021.
-                </li>
-            </ul>
-            <!-- 
+        <p>I am a post-doc, working with <a href=
+        "https://home.sandiego.edu/~shulman/">Mike Shulman</a> at
+        the University of San Diego.</p>
+        <p>Here is a brief <a href=
+        "https://gitlab.com/huevosybacon/cv-public/raw/master/cv.pdf?inline=false">
+        CV</a>.</p>
+        <h2>Writing</h2>
+        <h3>Preprints</h3>
+        <ul>
+            <li>
+                <em>Opetopic algebras I: Algebraic structures on
+                opetopic sets</em> (with <a href=
+                "https://hothanh.fr/cedric/">Cédric Ho Thanh</a>).
+                <a href=
+                "https://arxiv.org/abs/1911.00907">arXiv:1911.00907.</a>
+            </li>
+            <li>
+                <em>Small object arguments, plus-construction, and
+                left exact localizations</em> (with <a href=
+                "http://mathieu.anel.free.fr/">Mathieu Anel</a>).
+                <a href=
+                "https://arxiv.org/abs/2004.00731">arXiv:2004.00731.</a>
+            </li>
+        </ul>
+        <h3>In preparation</h3>
+        <ul>
+            <li>
+                <em>Opetopic algebras II: Homotopy-coherent
+                opetopic algebras</em> (with <a href=
+                "https://hothanh.fr/cedric/">Cédric Ho Thanh</a>).
+            </li>
+            <li>
+                <em>Contextual categories as monoids in a category
+                of collections</em> (with <a href=
+                "http://peterlefanulumsdaine.com/">Peter LeFanu
+                Lumsdaine</a>).
+            </li>
+        </ul>
+        <h3>PhD Thesis</h3>
+        <dl>
+            <dt>
+                I did my PhD in the <a href=
+                "https://www.irif.fr/poles/pps/index">PPS</a> group
+                at the <a href=
+                "https://www.irif.fr//en/index">IRIF</a>,
+                Université Paris Diderot. It was supervised by
+                <a href="https://www.irif.fr/~mellies/">Paul-André
+                Melliès</a>.
+            </dt>
+            <dt>
+                My PhD thesis titled "<em>From dependent type
+                theory to higher algebraic structures</em>" is
+                available on the arXiv: <a href=
+                "https://arxiv.org/abs/2110.02804">arXiv:2110.02804</a>.
+                The current version of the manuscript can also be
+                found <a href=
+                "https://gitlab.math.univ-paris-diderot.fr/chaitanya/these-public/-/raw/master/main.pdf?inline=false">
+                here</a>. The slides of the defence are available
+                <a href=
+                "https://gitlab.com/huevosybacon/talks-public/-/raw/master/soutenance-de-these.pdf?inline=false">
+                here</a>.
+            </dt>
+        </dl>
+        <h2>Talks</h2>
+        <ul>
+            <li>Contextual categories as monoids in a category of
+            collections, <a href=
+            "https://hott.github.io/HoTT-2019//programme/">HoTT
+            2019</a>, Carnegie Mellon University, Pittsburgh.
+            <a href=
+            "https://gitlab.com/huevosybacon/talks-public/-/raw/master/slides-cmu.pdf?inline=false">
+                Slides</a>.
+            </li>
+            <li>Dependently typed theories as generalised algebraic
+            theories, <a href=
+            "http://logic.math.su.se/palmgren-memorial/">Memorial
+            conference for Erik Palmgren</a>, 2020. <a href=
+            "https://gitlab.com/huevosybacon/talks-public/-/raw/master/expose-palmgren-memorial.pdf?inline=false">
+                Slides</a>.
+            </li>
+            <li>The opetopic nerve of operads, <a href=
+            "https://www.irif.fr/~socs2020/fr/index.html">SOCS
+            2020</a>. <a href=
+            "https://gitlab.com/huevosybacon/talks-public/-/raw/master/talk-socs2020.pdf?inline=false">
+                Slides</a>.
+            </li>
+            <li>Dependently typed algebraic theories, <a href=
+            "http://www.math.muni.cz/~bourkej/BAS.html">Masaryk
+            University Algebra Seminar</a>, 2021. <a href=
+            "https://gitlab.com/huevosybacon/talks-public/-/raw/master/expose-brno-2021.pdf?inline=false">
+                Slides</a>.
+            </li>
+            <li>Structures algébriques décrites par les théories à
+            types dépendants, <a href=
+            "https://www.irif.fr/seminaires/cat/index">Séminaire
+            Catégories supérieures</a>, IRIF, 2021. <a href=
+            "https://gitlab.com/huevosybacon/talks-public/-/raw/master/seminaire-cat-sup-p7-mars-2021.pdf?inline=false">
+                Notes in French</a>.
+            </li>
+            <li>Dependent type theory and higher algebraic
+            structures, <a href="https://www.math.ntnu.no/acpms/">
+                ACPMS seminar</a>, 2021.
+            </li>
+        </ul><!-- 
                  <h2>
                  <a href="enseignement.html">
                  Enseignement</a>
                  </h2> -->
-        </main>
-        <footer>
-            <h3>Contact</h3>
-            <address>
-                <dl>
-                    <!-- <dt>Office 146</dt> -->
-                    <dt>Saints Tekakwitha and Serra Hall</dt>
-                    <dt>University of San Diego</dt>
-                    <dt>5998 Alcala Park, San Diego, CA 92110.</dt>
-                </dl>
-                <p> Email: cleenasubramaniam [at] sandiego [dot] edu </p>
-                <!-- <p> chaitanya [at] irif [dot] fr </p> -->
-            </address>
-            <p>
-                This website is on
-                <a href="https://github.com/huevosybacon/huevosybacon.github.io">
-                    github</a>.
-            </p>
-        </footer>
-    </body>
+        <h3><a href="teaching/index.html">Teaching</a></h3>
+    </main>
+    <footer>
+        <h3>Contact</h3>
+        <address>
+            <dl>
+                <!-- <dt>Office 146</dt> -->
+                <dt>Saints Tekakwitha and Serra Hall</dt>
+                <dt>University of San Diego</dt>
+                <dt>5998 Alcala Park, San Diego, CA 92110.</dt>
+            </dl>
+            <p>Email: cleenasubramaniam [at] sandiego [dot] edu</p>
+            <!-- <p> chaitanya [at] irif [dot] fr </p> -->
+        </address>
+        <p>This website is on <a href=
+        "https://github.com/huevosybacon/huevosybacon.github.io">github</a>.</p>
+    </footer>
+</body>
 </html>
