fixed broken link

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -17,8 +17,8 @@
     <h2>General</h2><a href="syllabus.pdf" target=
     "_blank">Syllabus</a><br>
     <br>
-    <h2>Assignments</h2><a href="HW1.pdf" target="_blank">Homework
-    1</a><br>
+    <h2>Assignments</h2><a href="assignments/HW1.pdf" target=
+    "_blank">Homework 1</a><br>
   </main>
 </body>
 </html>
