--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -14,11 +14,17 @@
     <h1>Math 130 A Survey of Calculus<br></h1><br>
   </header>
   <main>
-    <h2>General</h2><a href="syllabus.pdf" target=
-    "_blank">Syllabus</a><br>
-    <br>
-    <h2>Assignments</h2><a href="assignments/HW1.pdf" target=
-    "_blank">Homework 1</a><br>
+    <h2>General</h2>
+    <ul>
+      <li><a href="syllabus.pdf" target="_blank">Syllabus</a></li>
+    </ul><br>
+    <h2>Assignments</h2>
+    <ul>
+      <li><a href="assignments/HW1.pdf" target="_blank">Homework
+      1</a></li>
+      <li><a href="assignments/HW2.pdf" target="_blank">Homework
+      2</a></li>
+    </ul><br>
   </main>
 </body>
 </html>
