--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -21,7 +21,8 @@
     <h2>Assignments</h2>
     <ul>
       <li><a href="assignments/HW1.pdf" target="_blank">Homework
-      1</a></li>
+      1</a> (<a href="assignments/HW1-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW2.pdf" target="_blank">Homework
       2</a></li>
     </ul><br>
