--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -25,6 +25,8 @@
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW2.pdf" target="_blank">Homework
       2</a></li>
+      <li><a href="assignments/HW3.pdf" target="_blank">Homework
+      3</a></li>
     </ul><br>
   </main>
 </body>
