--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -24,7 +24,8 @@
       1</a> (<a href="assignments/HW1-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW2.pdf" target="_blank">Homework
-      2</a></li>
+      2</a> (<a href="assignments/HW2-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW3.pdf" target="_blank">Homework
       3</a></li>
     </ul><br>
