--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -28,6 +28,8 @@
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW3.pdf" target="_blank">Homework
       3</a></li>
+      <li><a href="assignments/HW4.pdf" target="_blank">Homework
+      4</a></li>
     </ul><br>
   </main>
 </body>
