--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -27,7 +27,8 @@
       2</a> (<a href="assignments/HW2-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW3.pdf" target="_blank">Homework
-      3</a></li>
+      3</a> (<a href="assignments/HW3-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
       4</a></li>
     </ul><br>
