--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -32,6 +32,11 @@
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
       4</a></li>
     </ul><br>
+    <h2>Take-home tests</h2>
+    <ul>
+      <li><a href="tests/TH1.pdf" target="_blank">Take-home test
+      1</a></li>
+    </ul>
   </main>
 </body>
 </html>
