math-130: lecture 9 notes added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -36,6 +36,11 @@
     <ul>
       <li><a href="tests/TH1.pdf" target="_blank">Take-home test
       1</a></li>
+    </ul><br>
+    <h2>Notes</h2>
+    <ul>
+      <li><a href="lectures/lecture-9.pdf" target="_blank">Lecture
+      9</a></li>
     </ul>
   </main>
 </body>
