math130: HW4 solutions added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -30,7 +30,8 @@
       3</a> (<a href="assignments/HW3-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
-      4</a></li>
+      4</a> (<a href="assignments/HW4-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
