math130: HW6 added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -32,6 +32,8 @@
       <li><a href="assignments/HW4.pdf" target="_blank">Homework
       4</a> (<a href="assignments/HW4-solns.pdf" target=
       "_blank">Solutions</a>)</li>
+      <li><a href="assignments/HW6.pdf" target="_blank">Homework
+      6</a></li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
