math130: HW6 solutions added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -33,7 +33,8 @@
       4</a> (<a href="assignments/HW4-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW6.pdf" target="_blank">Homework
-      6</a></li>
+      6</a> (<a href="assignments/HW6-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
