--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -35,6 +35,8 @@
       <li><a href="assignments/HW6.pdf" target="_blank">Homework
       6</a> (<a href="assignments/HW6-solns.pdf" target=
       "_blank">Solutions</a>)</li>
+      <li><a href="assignments/HW7.pdf" target="_blank">Homework
+      7</a></li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
