math130: midterm added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -42,6 +42,8 @@
     <ul>
       <li><a href="tests/TH1.pdf" target="_blank">Take-home test
       1</a></li>
+      <li><a href="tests/midterm.pdf" target="_blank">Midterm
+      exam</a></li>
     </ul><br>
     <h2>Notes</h2>
     <ul>
