math130: hw7 solns added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -36,7 +36,8 @@
       6</a> (<a href="assignments/HW6-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW7.pdf" target="_blank">Homework
-      7</a></li>
+      7</a> (<a href="assignments/HW7-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
