math130 th2 link

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -43,9 +43,14 @@
     <ul>
       <li><a href="tests/TH1.pdf" target="_blank">Take-home test
       1</a></li>
+      <li><a href="tests/TH2.pdf" target="_blank">Take-home test
+      2</a></li>
+    </ul><br>
+    <h2>Exams</h2>
+    <ul>
       <li><a href="tests/midterm.pdf" target="_blank">Midterm
       exam</a></li>
-    </ul><br>
+    </ul>
     <h2>Notes</h2>
     <ul>
       <li><a href="lectures/lecture-9.pdf" target="_blank">Lecture
