--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -38,6 +38,8 @@
       <li><a href="assignments/HW7.pdf" target="_blank">Homework
       7</a> (<a href="assignments/HW7-solns.pdf" target=
       "_blank">Solutions</a>)</li>
+      <li><a href="assignments/HW8.pdf" target="_blank">Homework
+      8</a></li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
@@ -50,7 +52,7 @@
     <ul>
       <li><a href="tests/midterm.pdf" target="_blank">Midterm
       exam</a></li>
-    </ul>
+    </ul><br>
     <h2>Notes</h2>
     <ul>
       <li><a href="lectures/lecture-9.pdf" target="_blank">Lecture
