--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         <address>
             <dl>
                 <!-- <dt>Office 146</dt> -->
+                <dt>Department of Mathematics</dt>
                 <dt>Saints Tekakwitha and Serra Hall</dt>
                 <dt>University of San Diego</dt>
                 <dt>5998 Alcala Park, San Diego, CA 92110.</dt>
