math130: added final mock

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -52,6 +52,8 @@
     <ul>
       <li><a href="tests/midterm.pdf" target="_blank">Midterm
       exam</a></li>
+      <li><a href="tests/mock-exam.pdf" target="_blank">Practice
+      final exam</a></li>
     </ul><br>
     <h2>Notes</h2>
     <ul>
