math130 practice exam solns and hw8 solns

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -39,7 +39,10 @@
       7</a> (<a href="assignments/HW7-solns.pdf" target=
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW8.pdf" target="_blank">Homework
-      8</a></li>
+      8</a> (<a href="assignments/HW8-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
+      <li><a href="assignments/all-HW-solns.pdf" target=
+      "_blank">All homework solutions as a single file</a></li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
@@ -53,7 +56,8 @@
       <li><a href="tests/midterm.pdf" target="_blank">Midterm
       exam</a></li>
       <li><a href="tests/mock-exam.pdf" target="_blank">Practice
-      final exam</a></li>
+      final exam</a> (<a href="tests/mock-exam-solns.pdf" target=
+      "_blank">Solutions</a>)</li>
     </ul><br>
     <h2>Notes</h2>
     <ul>
