midterm cheatsheet added

--- a/teaching/math130/index.html
+++ b/teaching/math130/index.html
@@ -59,6 +59,11 @@
       final exam</a> (<a href="tests/mock-exam-solns.pdf" target=
       "_blank">Solutions</a>)</li>
     </ul><br>
+    <h2>Cheat sheets</h2>
+    <ul>
+      <li><a href="tests/cheatsheet.pdf" target="_blank">Midterm
+      cheatsheet</a></li>
+    </ul>
     <h2>Notes</h2>
     <ul>
       <li><a href="lectures/lecture-9.pdf" target="_blank">Lecture
