math-150: added syllabus

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -16,7 +16,7 @@
   <main>
     <h2>General</h2>
     <ul>
-      <!-- <li><a href="syllabus.pdf" target="_blank">Syllabus</a></li> -->
+      <li><a href="syllabus.pdf" target="_blank">Syllabus</a></li>
     </ul><br>
     <h2>Notes</h2>
     <ul>
