math150: added intro slides

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -20,8 +20,8 @@
     </ul><br>
     <h2>Notes</h2>
     <ul>
-      <!-- <li><a href="lectures/lecture-9.pdf" target="_blank">Lecture
-           9</a></li> -->
+      <li><a href="lectures/lecture-minus-1.pdf" target=
+      "_blank">Slides from the introductory lecture</a></li>
     </ul><br>
     <h2>Assignments</h2>
     <ul>
