math150 - added pre-course quiz

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -17,6 +17,8 @@
     <h2>General</h2>
     <ul>
       <li><a href="syllabus.pdf" target="_blank">Syllabus</a></li>
+      <li><a href="./tests/pre-course/test.pdf" target=
+      "_blank">Pre-course quiz</a></li>
     </ul><br>
     <h2>Notes</h2>
     <ul>
