--- a/teaching/index.html
+++ b/teaching/index.html
@@ -14,7 +14,7 @@
     <h1>Teaching<br></h1><br>
   </header>
   <ul>
-    <li><a href="math130/index.html">Math 130</a></li>
+    <!-- <li><a href="math130/index.html">Math 130</a></li> -->
     <li><a href="math150/index.html">Math 150</a></li>
   </ul>
 </body>
