--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -27,10 +27,10 @@
     </ul><br>
     <h2>Assignments</h2>
     <ul>
-      <!-- <li><a href="assignments/HW1.pdf" target="_blank">Homework
-           1</a> (<a href="assignments/HW1-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/HW2.pdf" target="_blank">Homework
+      <li><a href="assignments/HW1.pdf" target="_blank">Homework
+      1</a> <!-- (<a href="assignments/HW1-solns.pdf" target=
+                   "_blank">Solutions</a>) --></li>
+<!-- <li><a href="assignments/HW2.pdf" target="_blank">Homework
            2</a> (<a href="assignments/HW2-solns.pdf" target=
            "_blank">Solutions</a>)</li>
            <li><a href="assignments/HW3.pdf" target="_blank">Homework
