--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -30,10 +30,10 @@
       <li><a href="assignments/HW1.pdf" target="_blank">Homework
       1</a> <!-- (<a href="assignments/HW1-solns.pdf" target=
                    "_blank">Solutions</a>) --></li>
-<!-- <li><a href="assignments/HW2.pdf" target="_blank">Homework
-           2</a> (<a href="assignments/HW2-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/HW3.pdf" target="_blank">Homework
+      <li><a href="assignments/HW2.pdf" target="_blank">Homework
+      2</a> <!-- (<a href="assignments/HW2-solns.pdf" target=
+                   "_blank">Solutions</a>) --></li>
+<!-- <li><a href="assignments/HW3.pdf" target="_blank">Homework
            3</a> (<a href="assignments/HW3-solns.pdf" target=
            "_blank">Solutions</a>)</li>
            <li><a href="assignments/HW4.pdf" target="_blank">Homework
