math150: added HW3

--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -33,8 +33,8 @@
       <li><a href="assignments/HW2.pdf" target="_blank">Homework
       2</a> <!-- (<a href="assignments/HW2-solns.pdf" target=
                    "_blank">Solutions</a>) --></li>
-<!-- <li><a href="assignments/HW3.pdf" target="_blank">Homework
-           3</a> (<a href="assignments/HW3-solns.pdf" target=
+      <li><a href="assignments/HW3.pdf" target="_blank">Homework
+      3</a> <!-- (<a href="assignments/HW3-solns.pdf" target=
            "_blank">Solutions</a>)</li>
            <li><a href="assignments/HW4.pdf" target="_blank">Homework
            4</a> (<a href="assignments/HW4-solns.pdf" target=
@@ -49,7 +49,7 @@
            8</a> (<a href="assignments/HW8-solns.pdf" target=
            "_blank">Solutions</a>)</li>
            <li><a href="assignments/all-HW-solns.pdf" target=
-           "_blank">All homework solutions as a single file</a></li> -->
+           "_blank">All homework solutions as a single file</a></li> --></li>
     </ul><br>
     <h2>Take-home tests</h2>
     <ul>
