--- a/teaching/math150/index.html
+++ b/teaching/math150/index.html
@@ -35,11 +35,14 @@
       "_blank">Solutions</a>)</li>
       <li><a href="assignments/HW3.pdf" target="_blank">Homework
       3</a> <!-- (<a href="assignments/HW3-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/HW4.pdf" target="_blank">Homework
-           4</a> (<a href="assignments/HW4-solns.pdf" target=
-           "_blank">Solutions</a>)</li>
-           <li><a href="assignments/HW6.pdf" target="_blank">Homework
+                   "_blank">Solutions</a>)</li> --></li>
+      <li><a href="assignments/in-class-problems.pdf" target=
+      "_blank">In-class problem sheet</a></li>
+      <li><a href="assignments/HW4.pdf" target="_blank">Homework
+      4</a> <!-- (<a href="assignments/HW4-solns.pdf" target=
+                        "_blank">Solutions</a>)</li> -->
+
+      <!-- <li><a href="assignments/HW6.pdf" target="_blank">Homework
            6</a> (<a href="assignments/HW6-solns.pdf" target=
            "_blank">Solutions</a>)</li>
            <li><a href="assignments/HW7.pdf" target="_blank">Homework
